Fixed horizontal scrollbar showing when vertical present, retained layout shift fix. #3

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
 body {
   /* scrollbar shift hotfix */
   width: 100vw;
+  overflow-x: hidden;
   background-color: #eee;
 }
 
